--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,11 @@
 /*-----------------------------------*\
   #CUSTOM PROPERTY
 \*-----------------------------------*/
-
+.GITHUB-REPO {
+  color: blue;
+  background-color: transparent;
+  text-decoration: none;
+}
 :root {
 
   /**
